--- a/Lec_04/3_data_wrangling/README.html
+++ b/Lec_04/3_data_wrangling/README.html
@@ -382,8 +382,8 @@ conditions: <code>filter</code></p></li>
 <code>summarise</code>, <code>ungroup</code></p></li>
 </ol>
 </div>
-<div id="case-study" class="section level2">
-<h2>Case Study</h2>
+<div id="outline-of-in-class-demo" class="section level2">
+<h2>Outline of In-Class Demo</h2>
 <p>To demonstrate the above functionality, we will use real-world
 political data from <a href="https://v-dem.net/">V-Dem</a>.
 Specifically, we will use the above function to explore the state of
@@ -428,7 +428,7 @@ indicators:
 </ol>
 </div>
 <div id="in-class-exercise" class="section level2">
-<h2>In-class Exercise</h2>
+<h2>In-Class Exercise</h2>
 <p>The quality of education has a decisive effect on a country’s future
 development. Applying the data wrangling tools we introduce in this
 lecture, perform the following task:</p>
@@ -452,9 +452,9 @@ informative.</p></li>
 </ol></li>
 <li><strong>Subset by rows</strong>
 <ol style="list-style-type: decimal">
-<li><p>List 10 countries-years that have the highest education level
+<li><p>List 5 countries-years that have the highest education level
 among its population.</p></li>
-<li><p>List 10 countries-years that suffer from the most severe
+<li><p>List 5 countries-years that suffer from the most severe
 inequality in education.</p></li>
 </ol></li>
 <li><strong>Summarize the data</strong>
@@ -464,19 +464,27 @@ indicators of education quality available?</p></li>
 <li><p>Create two types of country-level indicators of education
 quality</p>
 <ol style="list-style-type: decimal">
-<li><p>Average level of education quality since 1984</p></li>
-<li><p>Change of education quality since 1984</p></li>
+<li><p>Average level of education quality from 1984 to 2022</p></li>
+<li><p>Change of education quality from 1984 to 2022</p></li>
 </ol></li>
-<li><p>Examine the data and discuss: Which countries perform the best
-and the worst in terms of education quality in the past four
-decades?</p></li>
+<li><p>Examine the data and <em>briefly</em> discuss: Which countries
+perform the best and the worst in terms of education quality in the past
+four decades?</p></li>
 </ol></li>
 </ol>
+<p><strong>Submission requirement:</strong> You will submit your outputs
+through Moodle. In your submission:</p>
+<ol style="list-style-type: decimal">
+<li>Attach a PDF document rendered by Rmarkdown</li>
+<li>In the text field of your submission, include the link to the
+corresponding Rmarkdown file in your <em>DaSPPA portfolio</em> GitHub
+repo.</li>
+</ol>
+<p><strong>Due:</strong> October 4, 2023</p>
 <p><em>Note:</em> <em>Please</em> <em>only use the functions we cover in
-this lecture for this exercise (if you choose, you may also use other
-functions in the <code>dplyr</code> documentation). There is
-<u>absolutely no need</u> to perform any data visualization for this
-exercise… We will get there in later lectures.</em></p>
+this lecture for this exercise. There is <u>absolutely no need</u> to
+perform any data visualization for this exercise… We will get there in
+later lectures.</em></p>
 </div>
 <div id="further-reading" class="section level2">
 <h2>Further reading</h2>
