--- a/Lec_04/2_use_git/README.html
+++ b/Lec_04/2_use_git/README.html
@@ -464,17 +464,17 @@ verify your student identity and get access: <a href="https://education.github.c
 </div>
 <div id="one-more-thing" class="section level2">
 <h2>One More Thing</h2>
-<p>GitHub is meant to use for storing large data. <u><strong>You will
-encounter technical problems when you try to push an individual data
-file that is over 100M</strong></u>. And it is generally not a good
-practice to keep a lot of big data files in a GitHub repo. For GitHub
-repository we work on in this course, we will include some fairly large
-data files for instructional purposes — this can help us share data and
-code in one place without any additional complication. In addition, the
-data we are working with for now are not prohibitively large for GitHub
-to store and synchronize. But I would like to bring to your attention
-that in real data science projects, data are rarely stored in GitHub
-repositories as we do it here.</p>
+<p>GitHub is NOT meant to use for storing and sharing large data.
+<u><strong>You will encounter technical problems when you try to push an
+individual file that is over 100M</strong></u>. And it is generally not
+a good practice to keep a lot of big data files in a GitHub repo. For
+GitHub repository we work on in this course, we will include some fairly
+large data files for instructional purposes — this can help us share
+data and code in one place without any additional complication. In
+addition, the data we are working with for now are not prohibitively
+large for GitHub to store and synchronize. But I would like to bring to
+your attention that in real data science projects, data are rarely
+stored in GitHub repositories as we do it here.</p>
 <p>For your final project, you may encounter problem with data storage,
 especially when it comes to sharing your Replication Dossier with me in
 the end of the semester. Feel free to chat with me to find a way. In
