Update lec 4 (to cover in lec 5)

--- a/Lec_04/3_data_wrangling/README.html
+++ b/Lec_04/3_data_wrangling/README.html
@@ -351,7 +351,7 @@ display: none;
 
 <h1 class="title toc-ignore">Data Wrangling (1)</h1>
 <h4 class="author">Haohan Chen</h4>
-<h4 class="date">Last update: September 30, 2023</h4>
+<h4 class="date">Last update: October 04, 2023</h4>
 
 </div>
 
@@ -1238,6 +1238,46 @@ d_gdp |&gt; arrange(GDP_per_capita)</code></pre>
 ##  9 Qatar                   94  2010 18107.           94.4
 ## 10 United Arab Emirates   207  2000 31871.           93.3
 ## # ℹ 6,779 more rows</code></pre>
+</div>
+<div id="perform-4-5-6-group-by-group-group_by-ungroup" class="section level3">
+<h3>7. Perform (4) (5) (6) group by group: <code>group_by</code>,
+<code>ungroup</code></h3>
+<p><strong>Task:</strong> Create a dataset that contains the year of the
+higest development level for each country/ region respectively.</p>
+<ol style="list-style-type: decimal">
+<li>Perform a data availability/ integrity check. Then aggregate the
+data into a new country-level dataset which contains the following
+indicators:
+<ol style="list-style-type: decimal">
+<li><p>Average development level from 1984 to 2022.</p></li>
+<li><p>Magnitude of growth from 1984 to 2022.</p></li>
+</ol></li>
+</ol>
+<pre class="r"><code># INSERT CODE HERE</code></pre>
+</div>
+<div id="create-new-columns-in-the-data-group_by-mutate-ungroup" class="section level3">
+<h3>8. Create new columns in the data: <code>group_by</code>,
+<code>mutate</code>, <code>ungroup</code></h3>
+<p><strong>Task:</strong> Add the following economic indicators to the
+data:</p>
+<ol style="list-style-type: decimal">
+<li><p>Country-year development level with reference to that of
+1984.</p></li>
+<li><p>Year-on-year economic growth.</p></li>
+</ol>
+<pre class="r"><code># INSERT CODE HERE</code></pre>
+</div>
+<div id="summarize-the-data-group_by-summarise-ungroup" class="section level3">
+<h3>9. Summarize the data: <code>group_by</code>,
+<code>summarise</code>, <code>ungroup</code></h3>
+<p><strong>Task:</strong> Perform a data availability/ integrity check.
+Then aggregate the data into a new country-level dataset which contains
+the following indicators:</p>
+<ol style="list-style-type: decimal">
+<li><p>Average development level from 1984 to 2022.</p></li>
+<li><p>Magnitude of growth from 1984 to 2022.</p></li>
+</ol>
+<pre class="r"><code># INSERT CODE HERE</code></pre>
 </div>
 </div>
 
